Add barebones map randomizer page and link to navbar.js

--- a/modding/map_randomizer.html
+++ b/modding/map_randomizer.html
@@ -1,8 +1,13 @@
 <html>
     <script src="components/navbar.js" type="/text/javascript" defer></script>
     <head>
-		<title> HGSS Randomizer </title>
+		<title> AdriennSn - Pokemon Map Randomizer </title>
         <link rel="stylesheet" href="/style/style.css"></link>
 		<nav-bar></nav-bar>
     </head>
+    <p>
+    image or video of randomizer in action
+    embedded link to smants video
+    algorithm description (with visuals)
+    </p>
 </html>
