Add Basic Map Randomizer Page

--- a/index.html
+++ b/index.html
@@ -5,4 +5,9 @@
         <link rel="stylesheet" href="style/style.css"></link>
 		<nav-bar></nav-bar>
     </head>
+    <div class="main">
+    <p>
+    Text
+    </p>
+    </div>
 </html>
