Add basic contact page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <div class="main">
     <p>
-    Text
+    Website under construction! Feel free to see that contacts page if you want to get into contact with me about math, modding, or anything else.
     </p>
     </div>
 </html>
