Add basic Emerald No AI page

--- a/modding/map_randomizer.html
+++ b/modding/map_randomizer.html
@@ -6,9 +6,8 @@
 		<nav-bar></nav-bar>
     </head>
     <div class="main">
-    
-    <iframe src="https://www.youtube.com/embed/t0m9JeMvb8c"> </iframe>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/t0m9JeMvb8c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     <p>
     In 2022 when I was taking a break from school due to personal health complications, I decided to try out modding for the first time and ended up making the Heart Gold and Soul Silver map randomizer as my first ever project! Special thanks goes to AtSign, who helped me get the program to run independent of the pret/pokeheartgold repository that I initially built it off of. Later, using the same code and algorithms, I was able to make the Black 2 and White 2 map randomizer, similar to the one made by my friend TurtleIsaac (who beat me to finishing it!) though with a bit less of a dedicated interface and a bit more options to make experiences unique.
     </p>
